# rush

./: .editorconfig  .gitattributes  .gitmodules  CMakeLists.txt  COPYRIGHT.txt  GRAMMAR.txt  GRAMMAR2.txt  LICENSE.txt  README.md  grammar.txt  main.rush
.circleci/: config.yml
.circleci/dockerfiles/x86-64-linux-gnu/: Dockerfile
.circleci/images/primary/: dockerfile  environment.dockerfile
.github/workflows/: build-test.yml  check-pr.yml  ci-cd.yml  install-llvm.yml  linux-gcc.yml  macos-clang.yml  main.yml  pr.yml  release.yml  win32-msvc.yml
.github/workflows/common/: release.yml
cmake/: install-blah.cmake
cmake/modules/: BuildType.cmake  Catch.cmake  CatchAddTests.cmake  RushAdd.cmake  Rush_AddLibrary.cmake
cmake/templates/: version.hpp.in
docs/archived/samples/: sample.txt  sample2.txt
docs/archived/scratch/: classes.md  concepts.md  errors.md  functions.md  keywords.md  literals.md  modules.md  tokens.md  types.md  variables.md
docs/getting-started/: introduction.md
docs/language/: arrays.md  classes-structures-and-records.md  concepts.md  constants-and-variables.md  constructors.md  control-flow.md  extensions.md  functions.md  generic-type-constraints.md  inheritance.md  literal-types.md  loops.md  memory-management.rush  naming-conventions.md  optional-coalescing.md  parameters.md  partial-trait-implementations.md  properties.md  strings.md  traits.md  tuples.md  union-and-intersection-types.rush
docs/scratch/: 1.rush  2.rush  3.rush  anonymous-records.rush  array-destructuring.rush  array-initialization.rush  async-await.rush  base-classes.rush  builder-initialization.rush  context-member-access.rush  enums.rush  file-reading-and-writing.rush  fix-parser.rush  interface-implementations.rush  logical-expressions-in-conditional.rush  namespaces.rush  numeric-literals.rush  operator-overloading.rush  pattern-matching.rush  project-sample.yml  return-statements.rush
include/rush/: namespaces.hpp  platform.hpp  version.hpp.in
include/rush/ast/: _operators.hpp.j2  abstract_syntax_tree.hpp  argument.hpp  ast.hpp  ast.json  binary.hpp  context.hpp  declaration.hpp  declarations.hpp  expression.hpp  expressions.hpp  expressions.json  identifier.hpp  iterator.hpp  list.hpp  literal.hpp  module.hpp  node.hpp  operators.json  parameter.hpp  patterns.hpp  printer.hpp  scope.hpp  scope_inserter.hpp  source.hpp  statement.hpp  statements.hpp  symbol.hpp  syntax_node.hpp  traversal.hpp  type.hpp  types.hpp  unary.hpp  variable.hpp  visitor.hpp
include/rush/core/: algorithm.hpp  ascii.hpp  charinfo.hpp  guard.hpp  iterator.hpp  iterator_range.hpp  iterator_ref.hpp  location.hpp  path.hpp  ring.hpp  source.hpp  source_manager.hpp
include/rush/diag/: _diagnostics.hpp.j2  diagnostic.hpp  diagnostics.json  dump.hpp  semantic_error.hpp  semantic_warning.hpp  syntax_error.hpp  visitor.hpp
include/rush/extra/: algorithm.hpp  dereferencing_iterator.hpp  (+7 more)
issues/: broken-lambda.rush  causing-bad-alloc.rush  member-access-literal-number.rush
lib/: CMakeLists.txt
lib/ast/: CMakeLists.txt  binary.cpp  context.cpp  identifier.cpp  iterator.cpp  literal.cpp  node.cpp  scope.cpp  traversal.cpp  type.cpp  visitor.cpp
lib/ast/decl/: function.cpp
lib/ast/decls/: class.cpp  member.cpp  module.cpp  source.cpp  storage.cpp  struct.cpp
lib/ast/expr/: binary.cpp  literal.cpp  unary.cpp
lib/ast/exprs/: array.cpp  binary.cpp  identifier.cpp  invocation.cpp  invoke.cpp  literal.cpp  nil.cpp  unary.cpp
lib/ast/ptrns/: binding.cpp  named.cpp  pattern.cpp  type_annotation.cpp
lib/ast/types/: builtin.cpp  builtin_type.cpp  function.cpp  nominal.cpp  reducer.cpp  reducer.hpp  type_matcher.cpp  type_reducer.cpp  utility.cpp
lib/core/: CMakeLists.txt  location.cpp  source.cpp  source_manager.cpp
lib/diag/: CMakeLists.txt  dump.cpp
lib/irgen/: CMakeLists.txt  llvm.cpp
lib/irgen/llvm/: declarations.cpp  expressions.cpp  memory.cpp  statements.cpp  types.cpp
lib/lexer/: CMakeLists.txt  _keyword_map.hpp.j2  _keywords.cpp.j2  _symbols.cpp.j2  dump.cpp  lexer.cpp  lexer_iterator.hpp  token.cpp
lib/parser/: CMakeLists.txt  dump.cpp  parse.cpp  parse_declaration.cpp  parse_expression.cpp  parse_statement.cpp  parse_type.cpp  parser.cpp  parser.hpp  printer.hpp  scope.cpp  symbol.cpp
lib/parser/parse/: declaration.cpp  expression.cpp  module.cpp  pattern.cpp  statement.cpp  type.cpp
lib/sema/: CMakeLists.txt  analyze.cpp  analyzer.cpp  engine.cpp  scope.cpp  symbol.cpp  symbol_entry.cpp  types.cpp
scratch/: demo1.rush  demo2.rush  demo3.rush  demo4.rush  demo5.rush  dynamic-variables.rush  explicitly-scoped-variables.md  fix-me.rush  format.rush  formattable-concept.rush  idea1.rush  implicit-parenthesis.rush  internal-symbols.rush  optional-casting.rush  pattern-matching.rush  point.rush  properties.rush  quine.rush  resolving-interface-member-conflicts.rush  resolving-trait-member-conflicts.rush  samples1.rush  tagged-string-literal.rush  type-thingies.rush  zip.rush
stdlib/core/: floating.rush  integral.rush  io.rush  math.rush  optional.rush  project.yaml  streams.rush  string.rush
stdlib/stdalgorithm/: algorithm.rush  project.yaml
stdlib/stdalgorithms/: project.yaml
stdlib/stdcollections/: project.yaml
stdlib/stdio/: io.rush  project.yaml  streams.rush
stdlib/stdmath/: math.rush  project.yaml
stdlib/stdnumerics/: project.yaml
test/: CMakeLists.txt
test/spikes/: CMakeLists.txt  irgen.cpp  lexer.cpp  main.cpp  parser.cpp
test/unit-tests/core/: CMakeLists.txt  ascii_test.cpp  charinfo_test.cpp  iterator_test.cpp  location_test.cpp  ring_test.cpp  source_manager_test.cpp  source_test.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/crush/: CMakeLists.txt  README.md  driver.cpp
tools/crush/include/commands/: dump.hpp  help.hpp
tools/rpm/: README.md
tools/rupl/: CMakeLists.txt  README.md  driver.cpp
tools/rush/: README.md
tools/rush-dump/: CMakeLists.txt  driver.cpp
tools/rush-lsrv/: README.md
utils/: CMakeLists.txt
utils/injen/: CMakeLists.txt  README.md
utils/injen/include/: options.hpp
utils/injen/src/: main.cpp
(+214 files in other folders)
